<resources>
    <string name="app_name">ContactManagement</string>

    <string name="no_account_txt">No Account?</string>
    <string name="sign_up_txt">Sign Up</string>
    <string name="login_btn_txt">Login</string>
    <string name="submit_btn_txt">Submit</string>
    <string name="view_all_txt">View All</string>
    <string name="edit_btn_txt">Edit</string>
    <string name="delete_btn_txt">Delete</string>


    <string name="hint_fullname">Full Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_contact">Contact</string>
    <string name="hint_email">Email</string>
    <string name="user_list">User List</string>
    <string name="add_user">Add User</string>


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>


    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="action_user_info">logged_in_user_info</string>
    <string name="logout_btn_txt">Log out</string>
    <string name="cancel_btn_txt">Cancel</string>
</resources>
